# pyflat

./: README.md  pyproject.toml  setup.py
pyflat/: __init__.py  pyflat.py
tests/: test_pyflat.py
